--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,5 @@ r2d2 = "0.8.10"
 dotenvy = "0.15"
 uuid = { version = "1.8.0", features = ["v4", "serde"] }
 postgres-types = "0.2.6"
-serde = "1.0.203"
+serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
