--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2021"
 
 [dependencies]
 rocket = { version = "0.5.1", features = ["json"] }
-diesel = { version = "2.2.1", features = ["postgres", "uuid"] }
-r2d2 = "0.8.10"
+diesel = { version = "2.2.1", features = ["postgres", "uuid", "r2d2"] }
+rocket_sync_db_pools = { version = "0.1.0", features = [
+  "diesel_postgres_pool",
+] }
 dotenvy = "0.15"
 uuid = { version = "1.8.0", features = ["v4", "serde"] }
 postgres-types = "0.2.6"
